[gd_scene load_steps=5 format=3 uid="uid://b4o1calmsc8xf"]

[ext_resource type="Script" path="res://EnemyPath/enemy_path.gd" id="1_agu5n"]
[ext_resource type="PackedScene" uid="uid://cg74ibad1uhcx" path="res://Enemy/enemy.tscn" id="2_i2eha"]

[sub_resource type="Animation" id="Animation_grr8i"]
resource_name = "line_blink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.584314, 0, 0, 0.552941), Color(0.584314, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1i20a"]
_data = {
"line_blink": SubResource("Animation_grr8i")
}

[node name="EnemyPath" type="Path2D"]
script = ExtResource("1_agu5n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Line")
libraries = {
"": SubResource("AnimationLibrary_1i20a")
}

[node name="Line" type="Line2D" parent="."]
modulate = Color(0.584314, 0, 0, 0.552941)
width = 20.0

[node name="PathFollow" type="PathFollow2D" parent="."]
rotates = false
loop = false

[node name="Enemy" parent="PathFollow" instance=ExtResource("2_i2eha")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="crashed" from="PathFollow/Enemy" to="." method="_on_enemy_crashed"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
